incio de creacion de archivos

--- a/.env
+++ b/.env
@@ -5,4 +5,7 @@
     PASSWORD = Matias1234!
     DATABASE = db_ControlGastos
 
+    # Configuracion de la aplicacion
+    SECRETKEY =     #poner la clave secreta que se desee
+
   
